@@ -1,5 +1,9 @@
 2003-12-12  Rodrigo Moya <rodrigo@ximian.com>
 
+	* libsoup/soup-soap-message.c: removed debugging of the messages here.
+
+2003-12-12  Rodrigo Moya <rodrigo@ximian.com>
+
 	* libsoup/soup-soap-message.c (soup_soap_message_start_envelope):
 	added information for SOAP-ENV namespace.
 
